--- a/mawulijo/config.yml
+++ b/mawulijo/config.yml
@@ -1,6 +1,6 @@
 ---
 baseURL:                "http://mawulijo.dev"
-publishDir:            "../docs"
+#publishDir:            "../docs"
 languageCode:           "en-us"
 title:                  "Joshua M. Agbeku"
 disableLiveReload:      true
