--- a/mawulijo/config.yml
+++ b/mawulijo/config.yml
@@ -9,9 +9,8 @@ preservetaxonomynames:  true
 
 params:
   description:   "Full stack Web developer based in Accra,Ghana"
-  author:        "Agbeku Mawuli Joshua"
+  author:        "Agbeku M. Joshua"
   title_first:   "Joshua"
-  title_other_names:  "M."
   title_last:    "Agbeku"
   # cl_video_base: "https://res.cloudinary.com/matt-finucane-portfolio/video/upload/ac_none"
   no_index:      true
