--- a/mawulijo/production.yml
+++ b/mawulijo/production.yml
@@ -1,17 +1,17 @@
 ---
-baseURL:                "https://mattfinucane.com"
+baseURL:                "https://mawulijo.me"
 languageCode:           "en-ie"
-title:                  "Matt Finucane"
+title:                  "Joshua M. Agbeku"
 disableLiveReload:      true
 watch:                  true
 preservetaxonomynames:  true
 
 params:
-  description:   "Freelance software engineer based in Berlin, Germany"
-  author:        "Matt Finucane"
-  title_first:   "Matt"
-  title_last:    "Finucane"
-  cl_video_base: "https://res.cloudinary.com/matt-finucane-portfolio/video/upload/ac_none"
+  description:   "Full stack Web developer based in Accra,Ghana"
+  author:        "Joshua M. Agbeku"
+  title_first:   "Joshua"
+  title_last:    "Agbeku"
+  #cl_video_base: "https://res.cloudinary.com/matt-finucane-portfolio/video/upload/ac_none"
   title_last:    "Finucane"
 
 menu:
