--- a/.docker/site/Dockerfile
+++ b/.docker/site/Dockerfile
@@ -4,7 +4,6 @@ MAINTAINER	Joshua Agbeku <mawulijo@gmail.com>
 ARG			hugo_version
 RUN			rm -rf /opt/public
 
-
 RUN 		apk add --update wget ca-certificates && \
 		    cd /tmp/ && \
 		    wget https://github.com/spf13/hugo/releases/download/v${hugo_version}/hugo_${hugo_version}_Linux-64bit.tar.gz && \
@@ -12,9 +11,8 @@ RUN 		apk add --update wget ca-certificates && \
 		    rm -r hugo_${hugo_version}_Linux-64bit.tar.gz && \
 		    mv hugo* /usr/bin/hugo && \
 		    apk del wget ca-certificates && \
-		    rm /var/cache/apk/* &&\
+		    rm /var/cache/apk/* 
 			
-
 WORKDIR 	/opt
 
 
